# yuzi-gltf2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/yuzi-gltf2/: accessor.h  animation.h  asset.h  buffer.h  bufferview.h  define.h  extension.h  glTFChildOfRootProperty.h  glTFProperty.h  gltf.h  image.h  material.h  mesh.h  node.h  sampler.h  scene.h  skin.h  texture.h  textureinfo.h
standalone/: CMakeLists.txt  main.cpp
